<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/label1_learning_ways"
            android:textAppearance="@style/TitleStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label1_1_learning_ways"
                android:textAppearance="@style/OptionStyle" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_minus_photos"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/number_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:text="2" />

                <Button
                    android:id="@+id/button_plus_photos"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label1_2_learning_ways"
                android:textAppearance="@style/OptionStyle" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_minus_try"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/number_try"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:text="3" />

                <Button
                    android:id="@+id/button_plus_try"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_commands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label2_1_learning_ways"
                android:textAppearance="@style/OptionStyle" />

            <Spinner
                android:id="@+id/spinner_command"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:checked="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/show"
                        android:textAppearance="@style/OptionStyle" />

                    <CheckBox
                        android:id="@+id/select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/selectConf"
                        android:textAppearance="@style/OptionStyle" />

                    <CheckBox
                        android:id="@+id/touch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/touch"
                        android:textAppearance="@style/OptionStyle" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center|center_vertical">

                    <CheckBox
                        android:id="@+id/point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/point"
                        android:textAppearance="@style/OptionStyle" />

                    <CheckBox
                        android:id="@+id/find"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/find"
                        android:textAppearance="@style/OptionStyle" />

                </TableRow>

            </TableLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/label2_learning_ways"
            android:textAppearance="@style/TitleStyle" />

        <TextView
            android:id="@+id/gender_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/label2_sexes"
            android:textAppearance="@style/OptionStyle" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/plci_opcja1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:checked="true"
                android:text="@string/label2_0_learning_ways_opcja1" />

            <RadioButton
                android:id="@+id/plci_opcja2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label2_0_learning_ways_opcja2" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/label2_2_learning_ways"
            android:textAppearance="@style/OptionStyle" />

        <!--<CheckBox-->
        <!--android:id="@+id/checkBox2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_weight="1"-->
        <!--android:text="@string/label2.3_learning_ways"-->
        <!--android:textAppearance="@style/OptionStyle" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label2_4_learning_ways"
                android:textAppearance="@style/OptionStyle" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_minus_time"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:text="5" />

                <Button
                    android:id="@+id/button_plus_time"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="s." />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label2_5_learning_ways"
                android:textAppearance="@style/OptionStyle" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/obramuj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/prompt_type1"
                        android:textAppearance="@style/OptionStyle"
                        android:textSize="18dp" />

                    <CheckBox
                        android:id="@+id/powieksz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/prompt_type2"
                        android:textAppearance="@style/OptionStyle"
                        android:checked="true"
                        android:textSize="18dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/porusz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/prompt_type3"
                        android:textAppearance="@style/OptionStyle"
                        android:textSize="18dp" />

                    <CheckBox
                        android:id="@+id/wyszarz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/prompt_type4"
                        android:textAppearance="@style/OptionStyle"
                        android:textSize="18dp" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>