<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F9BB8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="20sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:text="@string/intro_FriendlyEmotions"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="40sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/intro_short"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_weight="7"
            android:background="@drawable/background_shape"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/intro_description"
            android:textColor="#05414D"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:text="@string/intro_instruction"
        android:textColor="#05414D"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/pg_logo_kolor" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/iwrd" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/eti" />
    </LinearLayout>

</LinearLayout>